[#32546907, #32876827, #32873669, #32874283] 1. manual trials not showing previous values 2. fixed reset button IE issue 3. fixed product selector weird behaviour 4. changed mouseover text of 'N' column

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -407,8 +407,14 @@ tr.upms td {
     color:#000000;
     display:block;
 	padding-right:10px;
+	cursor: pointer;
    /* width:400px;*/
 }
+
+#menuwrapper ul li ul li a label{
+	cursor: pointer;
+}
+
 
 /**** THIRD LEVEL MENU ****/
 /* We need to hide the 3rd menu, when hovering the first level menu */
